# CoPaw

./: Git仓库管理规范与指南.md  README.md  README_ja.md  README_ru.md  README_zh.md  pyproject.toml
console/: index.html  package-lock.json  package.json  vite.config.ts
console/src/api/: config.ts  request.ts
console/src/components/: ChunkErrorBoundary.tsx
console/src/constants/: skill.ts
console/src/hooks/: useProgressiveRender.ts  useTimezoneOptions.ts
console/src/locales/: en.json  ja.json  ru.json  zh.json
console/src/stores/: agentStore.ts
console/src/styles/: layout.css
console/src/utils/: lazyWithRetry.ts
src/copaw/: __version__.py  constant.py  exceptions.py
src/copaw/agents/: command_handler.py  model_factory.py  prompt.py  react_agent.py  skills_hub.py  skills_manager.py  tool_guard_mixin.py
src/copaw/app/: _app.py  auth.py  auth_yukuai.py  multi_agent_manager.py  user_agent_manager.py
src/copaw/cli/: channels_cmd.py  chats_cmd.py  main.py  plugin_commands.py  providers_cmd.py  task_cmd.py  update_cmd.py
src/copaw/config/: config.py  utils.py
src/copaw/envs/: store.py
src/copaw/local_models/: __init__.py  download_manager.py  llamacpp.py  manager.py  model_manager.py
src/copaw/plugins/: __init__.py  api.py  architecture.py  loader.py  registry.py  runtime.py
src/copaw/providers/: anthropic_provider.py  capability_baseline.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider.py  provider_manager.py  retry_chat_model.py
src/copaw/security/: __init__.py  secret_store.py
src/copaw/utils/: command_runner.py  logging.py  stdio.py
tests/unit/app/: test_chat_updates.py
tests/unit/channels/: test_onebot_channel.py  test_qq_channel.py
tests/unit/cli/: test_cli_task.py
tests/unit/local_models/: test_download_manager.py  test_llamacpp_backend.py  test_local_model_manager.py  test_model_manager.py
tests/unit/providers/: test_provider_manager.py  test_siliconflow_provider.py
tests/unit/security/: test_secret_store.py
tests/unit/utils/: test_command_runner.py
tests/unit/workspace/: test_agent_model.py  test_cli_agent_id.py
website/: index.html  vite.config.ts
website/public/docs/: channels.en.md  channels.zh.md  commands.en.md  commands.zh.md  config.en.md  config.zh.md  models.en.md  models.zh.md  plugins.en.md  plugins.zh.md
website/public/release-notes/: v1.0.1.md  v1.0.1.zh.md  v1.0.2.md  v1.0.2.zh.md
website/src/: App.tsx  config.ts  index.css
website/src/components/: CatPawIcon.tsx  SiteLayout.tsx
website/src/pages/: Docs.tsx  Downloads.tsx  ReleaseNotes.tsx
webui/: index.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
webui/src/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
webui/src/api/: authHeaders.ts  index.ts
webui/src/constants/: channel.ts  timezone.ts
webui/src/contexts/: ThemeContext.tsx
webui/src/hooks/: useAppMessage.ts
webui/src/layouts/: Header.tsx  Sidebar.tsx  constants.ts  index.module.less
webui/src/locales/: en.json  ja.json  ru.json  zh.json
webui/src/stores/: agentStore.ts
webui/src/utils/: error.ts  (+5 more)
(+311 files in other folders)
